--- a/compliance-account-setup.yaml
+++ b/compliance-account-setup.yaml
@@ -7,9 +7,9 @@
 #
 # http://www.apache.org/licenses/LICENSE-2.0
 #
-# or in the "license" file accompanying this file. This file is distributed 
-# on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
-# express or implied. See the License for the specific language governing 
+# or in the "license" file accompanying this file. This file is distributed
+# on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
+# express or implied. See the License for the specific language governing
 # permissions and limitations under the License.
 #
 
@@ -25,7 +25,29 @@
 #
 
 AWSTemplateFormatVersion: 2010-09-09
-Description: Sets up the Compliance Account with lambda functions used by custom rules and the elements used by the RuleSet. 
+Description: Sets up the Compliance Account with lambda functions used by custom rules and the elements used by the RuleSet.
+
+#==================================================
+# Metadata
+#==================================================
+Metadata:
+
+  AWS::CloudFormation::Interface:
+
+    ParameterGroups:
+        Parameters:
+          - CentralizedS3BucketConfig
+          - SourceLambdaBucket
+          - EmailAddressForComplianceNotifications
+
+    ParameterLabels:
+      CentralizedS3BucketConfig:
+        default: Config Bucket Prefix
+      SourceLambdaBucket:
+        default: Source Lambda Bucket
+      EmailAddressForComplianceNotifications:
+        default: Email Address
+
 Parameters:
   SourceLambdaBucket:
     Type: String
@@ -33,7 +55,7 @@ Parameters:
     MaxLength: 63
     MinLength: 3
     ConstraintDescription: Enter the name not the ARN, must be in the same region than the CloudFormation stack
-    
+
   CentralizedS3BucketConfig:
     ConstraintDescription: Enter DNS-compliant prefix
     Description: Bucket prefix where Config logs will be stored. The Bucket will be created with a dash and the account ID (12-digit) appended to the prefix you have entered.
@@ -41,7 +63,12 @@ Parameters:
     MaxLength: 63
     MinLength: 10
     Type: String
-    
+
+  EmailAddressForComplianceNotifications:
+    ConstraintDescription: Enter email address to which notifications will be sent
+    Description: Email address to which notifications will be sent.
+    Type: String
+
 Resources:
 
   CreateRuleSetStack:
@@ -50,49 +77,50 @@ Resources:
       TemplateURL: !Join ["/", ["https://s3.amazonaws.com", !Ref SourceLambdaBucket, "compliance-account-ruleset-setup.yaml"]]
       Parameters:
         SourceLambdaBucket: !Ref SourceLambdaBucket
-        LambdaRuleIAMRoleARN: !GetAtt 
+        LambdaRuleIAMRoleARN: !GetAtt
         - LambdaRuleIAMRole
         - Arn
+        EmailAddressForComplianceNotifications: !Ref EmailAddressForComplianceNotifications
     DependsOn: LambdaRuleIAMRole
 
-  ComplianceEventsDynamoDBTable: 
+  ComplianceEventsDynamoDBTable:
     Type: "AWS::DynamoDB::Table"
-    Properties: 
-      AttributeDefinitions: 
-        - 
+    Properties:
+      AttributeDefinitions:
+        -
           AttributeName: "RuleARN"
           AttributeType: "S"
-        - 
+        -
           AttributeName: "RecordedInDDBTimestamp"
           AttributeType: "S"
-      KeySchema: 
-        - 
+      KeySchema:
+        -
           AttributeName: "RuleARN"
           KeyType: "HASH"
-        - 
+        -
           AttributeName: "RecordedInDDBTimestamp"
           KeyType: "RANGE"
-      ProvisionedThroughput: 
+      ProvisionedThroughput:
         ReadCapacityUnits: "5"
         WriteCapacityUnits: "5"
       TableName: "ComplianceEventsTable"
 
-  ComplianceStatusDynamoDBTable: 
+  ComplianceStatusDynamoDBTable:
     Type: "AWS::DynamoDB::Table"
-    Properties: 
-      AttributeDefinitions: 
-        - 
+    Properties:
+      AttributeDefinitions:
+        -
           AttributeName: "RuleARN"
           AttributeType: "S"
-      KeySchema: 
-        - 
+      KeySchema:
+        -
           AttributeName: "RuleARN"
           KeyType: "HASH"
-      ProvisionedThroughput: 
+      ProvisionedThroughput:
         ReadCapacityUnits: "5"
         WriteCapacityUnits: "5"
       TableName: "ComplianceStatusTable"
-    
+
   LambdaRuleIAMRole:
     Type: 'AWS::IAM::Role'
     Properties:
@@ -111,7 +139,7 @@ Resources:
   LambdaRuleLogPolicy:
     Type: 'AWS::IAM::Policy'
     Properties:
-      Roles: 
+      Roles:
       - LambdaForComplianceRuleRole
       PolicyName: LambdaRuleLogPolicy
       PolicyDocument:
@@ -119,7 +147,7 @@ Resources:
         Statement:
           - Effect: Allow
             Action: 'logs:CreateLogGroup'
-            Resource: !Join 
+            Resource: !Join
               - ':'
               - - 'arn:aws:logs'
                 - !Ref 'AWS::Region'
@@ -128,14 +156,14 @@ Resources:
             Action:
               - 'logs:CreateLogStream'
               - 'logs:PutLogEvents'
-            Resource: 
+            Resource:
               - !Join [ '', ['arn:aws:logs:', !Ref 'AWS::Region', ':', !Ref 'AWS::AccountId', ':log-group:/aws/lambda/*', ':*']]
     DependsOn: LambdaRuleIAMRole
 
   LambdaRuleDynamoPolicy:
     Type: 'AWS::IAM::Policy'
     Properties:
-      Roles:  
+      Roles:
       - LambdaForComplianceRuleRole
       PolicyName: LambdaRuleDynamoPolicy
       PolicyDocument:
@@ -143,7 +171,7 @@ Resources:
         Statement:
           - Effect: Allow
             Action: 'dynamodb:UpdateItem'
-            Resource: !Join 
+            Resource: !Join
               - ':'
               - - 'arn:aws:dynamodb'
                 - !Ref 'AWS::Region'
@@ -151,21 +179,21 @@ Resources:
                 - 'table/ComplianceStatusTable'
           - Effect: Allow
             Action: 'dynamodb:UpdateItem'
-            Resource: !Join 
+            Resource: !Join
               - ':'
               - - 'arn:aws:dynamodb'
                 - !Ref 'AWS::Region'
                 - !Ref 'AWS::AccountId'
                 - 'table/ComplianceEventsTable'
-    DependsOn: 
+    DependsOn:
     - LambdaRuleIAMRole
     - ComplianceStatusDynamoDBTable
-    - ComplianceEventsDynamoDBTable    
+    - ComplianceEventsDynamoDBTable
 
   LambdaRuleSNSPolicy:
     Type: 'AWS::IAM::Policy'
     Properties:
-      Roles: 
+      Roles:
       - LambdaForComplianceRuleRole
       PolicyName: LambdaRuleSNSPolicy
       PolicyDocument:
@@ -174,15 +202,15 @@ Resources:
           - Effect: Allow
             Action: 'sns:Publish'
             Resource: '*'
-    DependsOn: 
+    DependsOn:
     - LambdaRuleIAMRole
     - ComplianceStatusDynamoDBTable
-    - ComplianceEventsDynamoDBTable    
+    - ComplianceEventsDynamoDBTable
 
   LambdaRuleS3Policy:
     Type: 'AWS::IAM::Policy'
     Properties:
-      Roles: 
+      Roles:
       - LambdaForComplianceRuleRole
       PolicyName: LambdaRuleS3Policy
       PolicyDocument:
@@ -191,11 +219,11 @@ Resources:
           - Effect: Allow
             Action: 's3:GetObject'
             Resource: '*'
-    DependsOn: 
+    DependsOn:
     - LambdaRuleIAMRole
     - ComplianceStatusDynamoDBTable
-    - ComplianceEventsDynamoDBTable      
-    
+    - ComplianceEventsDynamoDBTable
+
   LambdaRuleAssumeRolePolicy:
     Type: 'AWS::IAM::Policy'
     Properties:
@@ -208,7 +236,22 @@ Resources:
             Effect: Allow
             Resource: '*'
         Version: 2012-10-17
-    DependsOn: 
+    DependsOn:
+    - LambdaRuleIAMRole
+
+  LambdaRuleSSMPolicy:
+    Type: 'AWS::IAM::Policy'
+    Properties:
+      Roles:
+      - LambdaForComplianceRuleRole
+      PolicyName: LambdaRuleSSMPolicy
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Action: 'ssm:GetParameter'
+            Resource: '*'
+    DependsOn:
     - LambdaRuleIAMRole
 
   CentralizedS3Bucket:
@@ -226,7 +269,7 @@ Resources:
         Value: Security
       VersioningConfiguration:
         Status: Enabled
-        
+
   CentralizedS3BucketPolicy:
     DependsOn: CentralizedS3Bucket
     Type: AWS::S3::BucketPolicy
